# odoo-pilot

./: .gitignore  pyproject.toml
docs/superpowers/plans/: 2026-03-17-phases-1-2-3-implementation.md
src/odoo_pilot/: __init__.py  __main__.py  analyzer.py  config.py  models.py  module_selector.py  odoo_writer.py  pipeline.py  scraper.py
tests/: test_analyzer.py  test_config.py  test_module_selector.py  test_odoo_writer.py  test_pipeline.py  test_scraper.py
