[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo-pilot"
version = "0.1.0"
description = "CLI tool to scrape websites and populate Odoo 19"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.40",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "rich>=13.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.40", "ollama>=0.4", "pydantic>=2.0"]
odoo = []  # no extra deps, uses stdlib xmlrpc.client
all = ["odoo-pilot[ai]"]

[project.scripts]
odoo-pilot = "odoo_pilot.__main__:main"
